--- a/Fundy Films-Website/css/style.css
+++ b/Fundy Films-Website/css/style.css
@@ -17,7 +17,7 @@ html{
 }
 body{
     min-height: 100vh;
-    background-image: url(file:///e%3A/FundyFilms/Fundy%20Films-Website/images/pexels-anniroenkae-4175070.jpg);
+    background-image: url(file:///E:/FundyFilms/FundyFilms/Fundy%20Films-Website/images/pexels-anniroenkae-4175070.jpg);
     background-size: cover;
     background-position: right;   
     overflow: hidden;
